fixed css spacing
fixed css spacing in css file

--- a/Template 2/style.css
+++ b/Template 2/style.css
@@ -1,8 +1,8 @@
 html, body {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin: 0;
-    padding: 0;
-    background: rgb(255,214,111);
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+margin: 0;
+padding: 0;
+background: rgb(255,214,111);
 background: -moz-linear-gradient(180deg, rgba(255,214,111,1) 0%, rgba(253,29,29,1) 61%, rgba(223,178,244,1) 100%);
 background: -webkit-linear-gradient(180deg, rgba(255,214,111,1) 0%, rgba(253,29,29,1) 61%, rgba(223,178,244,1) 100%);
 background: linear-gradient(180deg, rgba(255,214,111,1) 0%, rgba(253,29,29,1) 61%, rgba(223,178,244,1) 100%);
@@ -10,29 +10,37 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffd66f",endCo
 background-attachment: fixed;
 color: white;
 font-weight: 4rem;
+height: 100%;
   }
 
-  #banner{
+#banner{
 width: 100%;
 height: 10rem;
   }
 
-  .divcontent{
-    border: 0.5rem white solid;
-    margin: 2rem;
-    padding: 1rem;
+.divcontent{
+border: 0.5rem white solid;
+margin: 2rem;
+padding: 1rem;
+}
+
+#image{
+  width: 10%;
+  height: 10%;
+  float:left;
+}
+
+footer{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 5%;
+  background-color: rgba(0, 0, 0, 0.7);
+  text-align: center;
+  padding: 1%;
   }
 
-  #image{
-    width: 10%;
-    height: 10%;
-    float:left;
-  }
-
-  footer{
-    left:0;
-    bottom:0;
-    width: 100%;
-    height: 25%;
-    background-color: black;
-  }
+#footerdiv1{
+  float: left;
+}
